kubernetes/alpha/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alpha
  namespace: default
  labels:
    app: alpha
    component: service
spec:
  ports:
    - name: grpc-port #important to name for istio
      port: 9001
  selector:
    app: alpha
